- Fixed bug #37100 (data is returned truncated with BINARY CURSOR)   Patch by Tony

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@267276 c90b9560-bf6c-de11-be94-00142212c4b1