ext/pgsql/pgsql.c
@@ -2472,10 +2472,9 @@ PHP_FUNCTION(pg_fetch_result)
 	if (PQgetisnull(pgsql_result, pgsql_row, field_offset)) {
 		Z_TYPE_P(return_value) = IS_NULL;
 	} else {
-		Z_STRVAL_P(return_value) = PQgetvalue(pgsql_result, pgsql_row, field_offset);
-		Z_STRLEN_P(return_value) = (Z_STRVAL_P(return_value) ? strlen(Z_STRVAL_P(return_value)) : 0);
-		Z_STRVAL_P(return_value) = safe_estrndup(Z_STRVAL_P(return_value),Z_STRLEN_P(return_value));
-		Z_TYPE_P(return_value) = IS_STRING;
+		char *value = PQgetvalue(pgsql_result, pgsql_row, field_offset);
+		int value_len = PQgetlength(pgsql_result, pgsql_row, field_offset);
+		ZVAL_STRINGL(return_value, value, value_len, 1);
 	}
 }
 /* }}} */
